--- a/QuantumQQTeamApp/Src/LeadScreen.fx.yaml
+++ b/QuantumQQTeamApp/Src/LeadScreen.fx.yaml
@@ -1091,6 +1091,7 @@ LeadScreen As screen:
                             ZIndex: =1
 
                             chbxunitdownLdS As checkbox:
+                                CheckboxBorderColor: =RGBA(0, 0, 0, 1)
                                 Default: =true
                                 DisplayMode: =DisplayMode.View
                                 FocusedBorderThickness: =//2
@@ -1102,6 +1103,7 @@ LeadScreen As screen:
                                 ZIndex: =1
 
                             chbxadditionalexpensesLdS As checkbox:
+                                CheckboxBorderColor: =RGBA(0, 0, 0, 1)
                                 Default: =true
                                 DisplayMode: =DisplayMode.View
                                 FocusedBorderThickness: =//2
@@ -1126,6 +1128,7 @@ LeadScreen As screen:
                                 ZIndex: =4
 
                             chbxtravelrequiredLdS As checkbox:
+                                CheckboxBorderColor: =RGBA(0, 0, 0, 1)
                                 Default: =true
                                 DisplayMode: =DisplayMode.View
                                 FocusedBorderThickness: =//2
@@ -1149,6 +1152,7 @@ LeadScreen As screen:
                                 ZIndex: =7
 
                             chbxcommunucationLdS As checkbox:
+                                CheckboxBorderColor: =RGBA(0, 0, 0, 1)
                                 Default: =true
                                 DisplayMode: =DisplayMode.View
                                 FocusedBorderThickness: =//2
@@ -1184,6 +1188,8 @@ LeadScreen As screen:
                                 ZIndex: =12
 
                             chbxsafetyLdS As checkbox:
+                                BorderColor: =RGBA(0, 0, 0, 1)
+                                CheckboxBorderColor: =RGBA(0, 0, 0, 1)
                                 Default: =true
                                 DisplayMode: =DisplayMode.View
                                 FocusedBorderThickness: =//2
