--- a/QuantumTechnicianApp/Src/ViewDetailsScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/ViewDetailsScreen.fx.yaml
@@ -1335,6 +1335,7 @@ ViewDetailsScreen As screen:
                 ZIndex: =3
 
                 ImageVDS As image:
+                    BorderColor: =RGBA(0, 0, 0, 1)
                     BorderThickness: =2
                     Height: =If(Parent.Width>Parent.Height,Parent.TemplateHeight/1.2,Parent.TemplateHeight/1.4)
                     Image: =ThisItem.FullImage
@@ -1343,7 +1344,7 @@ ViewDetailsScreen As screen:
                         If(!IsBlank(VarfullImage),
                         Set(VarImagePopup,true);
                         Set(VarTimerImage,true));*/
-                        Set(VarImagePopup,true);
+                        //Set(VarImagePopup,true);
                         Set(VarTimerImage,true);
                     PaddingBottom: =10
                     PaddingLeft: =2
@@ -1390,22 +1391,11 @@ ViewDetailsScreen As screen:
             Color: =RGBA(0, 0, 0, 1)
             Height: =Parent.Height/20
             Icon: =Icon.Cancel
-            OnSelect: =Set(VarImagePopup,false);Set(VarfullImage,Blank());
+            OnSelect: =Set(VarImagePopup,false);
             Width: =Parent.Height/20
             X: =imgImagePopupVDS.X+(imgImagePopupVDS.Width-Self.Width)
             Y: =imgImagePopupVDS.Y
             ZIndex: =2
-
-        Timer1_1 As timer:
-            AutoPause: =If(!IsBlank(VarfullImage),true,false)
-            Duration: =6000
-            OnTimerEnd: =Set(VarTimerImage,false);Set(VarImagePopup,true);
-            OnTimerStart: =//Set(VarfullImage,glryImageVDS.Selected.Images.)
-            Start: =VarTimerImage
-            Visible: =false
-            X: =40
-            Y: =40
-            ZIndex: =3
 
     grpMenuVDS As group:
         Height: =5
@@ -1495,7 +1485,7 @@ ViewDetailsScreen As screen:
     PopopWaitCursorVDS As groupContainer.manualLayoutContainer:
         Fill: =RGBA(0, 0, 0, 0.29)
         Height: =Parent.Height
-        Visible: =//VarTimerImage
+        Visible: =VarTimerImage
         Width: =Parent.Width
         ZIndex: =5
 
@@ -1549,7 +1539,7 @@ ViewDetailsScreen As screen:
                 ZIndex: =2
 
             Timer1 As timer:
-                Duration: =6000
+                Duration: =5000
                 OnTimerEnd: =Set(VarTimerImage,false);Set(VarImagePopup,true);
                 Start: =VarTimerImage
                 Visible: =false
