--- a/QuantumTechnicianApp/CanvasManifest.json
+++ b/QuantumTechnicianApp/CanvasManifest.json
@@ -144,6 +144,7 @@
     "QuotedSOldLeads",
     "ViewDetailsScreen",
     "ChatScreen",
-    "UserValidateScreen"
+    "UserValidateScreen",
+    "AboutScreen"
   ]
 }
