--- a/QuantumTechnicianApp/Src/App.fx.yaml
+++ b/QuantumTechnicianApp/Src/App.fx.yaml
@@ -112,8 +112,8 @@ App As appinfo:
             },
             {
                 Title: "About",
-                icon: Icon.Information//,
-        //Navigate: BuildingInfoScreen
+                icon: Icon.Information,
+                Navigate: AboutScreen
             },
             {
                 Title: "Support",
