--- a/QuantumTechnicianApp/Src/LoadingScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/LoadingScreen.fx.yaml
@@ -29,6 +29,7 @@ LoadingScreen As screen:
 
     VersionLS As label:
         Align: =Align.Center
+        Font: =Header.HeaderFont
         FontWeight: =FontWeight.Semibold
         PaddingRight: =5.34
         PaddingTop: =5.34
