--- a/QuantumTechnicianApp/Src/AboutScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/AboutScreen.fx.yaml
@@ -1,2 +1,255 @@
 AboutScreen As screen:
 
+    ctnMainCS_1 As groupContainer.verticalAutoLayoutContainer:
+        Fill: =RGBA(237, 237, 237, 1)
+        Height: =Parent.Height
+        LayoutAlignItems: =LayoutAlignItems.Stretch
+        LayoutDirection: =LayoutDirection.Vertical
+        LayoutGap: =10
+        LayoutMode: =LayoutMode.Auto
+        LayoutOverflowY: =LayoutOverflow.Scroll
+        PaddingLeft: =10
+        PaddingRight: =10
+        Width: =Parent.Width
+        ZIndex: =1
+
+        ctnHeaderCS_1 As groupContainer.horizontalAutoLayoutContainer:
+            AlignInContainer: =AlignInContainer.SetByContainer
+            Fill: =RGBA(255, 255, 255, 1)
+            FillPortions: =0
+            Height: =If(Parent.Height<Parent.Width,60,80)
+            LayoutMinHeight: =100
+            LayoutMinWidth: =250
+            LayoutMode: =LayoutMode.Auto
+            Width: =Parent.Width
+            ZIndex: =1
+
+            IconMenuCS_1 As icon.Hamburger:
+                Color: =RGBA(0, 0, 0, 1)
+                Height: =Parent.Height
+                Icon: =Icon.Hamburger
+                OnSelect: =Set(varshowMenu,!varshowMenu)
+                PaddingBottom: =Parent.Height/3
+                PaddingTop: =Parent.Height/3
+                Width: =Parent.Height/2
+                X: =18
+                Y: =11
+                ZIndex: =1
+
+            imgSchindlerLogoCS_1 As image:
+                DisplayMode: =DisplayMode.View
+                Fill: =RGBA(255, 255, 255, 1)
+                Height: =Parent.Height
+                Image: ='1x'
+                LayoutMinHeight: =320
+                LayoutMinWidth: =320
+                PaddingBottom: =5
+                PaddingTop: =0.00
+                Width: =If(Parent.Width>Parent.Height,Parent.Width/10,Parent.Width/12)
+                X: =0.00
+                ZIndex: =2
+
+            iconBackCS_1 As icon.BackArrow:
+                AlignInContainer: =AlignInContainer.Center
+                Color: =RGBA(0, 0, 0, 1)
+                Height: =Parent.Height/2
+                Icon: =Icon.ChevronLeft
+                OnSelect: |
+                    =// for lead list expand 
+                    UpdateContext({locInfoExpanded:true});
+                    Back();
+                    Set(VarLeadMessages,false);
+                    //for timer 
+                    UpdateContext({startTimerCS:false});
+                    Refresh(LeadChats);
+                PaddingBottom: =5
+                PaddingTop: =5
+                Width: =Parent.Height/2
+                X: =18
+                Y: =11
+                ZIndex: =3
+
+            lblHeaderCS_1 As label:
+                DisplayMode: =DisplayMode.View
+                Font: =Font.Arial
+                FontWeight: =FontWeight.Bold
+                Height: =Parent.Height
+                LayoutMinHeight: =70
+                PaddingLeft: =20
+                PaddingRight: =5.34
+                PaddingTop: =5.34
+                Size: |
+                    =//21.36
+                    If(Parent.Width<500,14,Parent.Width>500,20)
+                Text: ="Technician Lead Generation"
+                Width: =Parent.Width-imgSchindlerLogoCS_1.Width-IconMenuCS_1.Width-btnUsernameCS_1.Width-50
+                X: =96.12
+                ZIndex: =4
+
+            btnUsernameCS_1 As button:
+                AlignInContainer: =AlignInContainer.Center
+                BorderColor: =Color.Red
+                Color: =RGBA(0, 0, 0, 1)
+                DisabledBorderColor: =RGBA(255, 0, 0, 1)
+                DisabledColor: =RGBA(0, 0, 0, 1)
+                DisabledFill: =RGBA(0, 0, 0, 0)
+                DisplayMode: =DisplayMode.Disabled
+                Fill: =RGBA(0, 0, 0, 0)
+                Font: =Font.Arial
+                Height: =If(Parent.Width<500,Parent.Height/1.8,Parent.Height/1.6)
+                RadiusBottomLeft: =50
+                RadiusBottomRight: =50
+                RadiusTopLeft: =50
+                RadiusTopRight: =50
+                Size: =If(Parent.Width<500,11,Parent.Width>500,12,12)
+                Text: |-
+                    =Left(User().FullName, 1) &
+                    Mid(
+                        User().FullName,
+                        Find(" ", User().FullName) + 1,
+                        1)
+                Width: =If(Parent.Width<500,Parent.Height/1.8,Parent.Height/1.6)
+                ZIndex: =6
+
+        ctnLeadsDetailsCS_1 As groupContainer.manualLayoutContainer:
+            BorderColor: =RGBA(219, 219, 219, 1)
+            BorderThickness: =2
+            Fill: =RGBA(255, 255, 255, 1)
+            Height: |
+                =If(Parent.Height<Parent.Width,Parent.Height/10,Parent.Height/16)
+            PaddingLeft: =10
+            PaddingRight: =10
+            RadiusBottomLeft: =10
+            RadiusBottomRight: =10
+            RadiusTopLeft: =10
+            RadiusTopRight: =10
+            Width: =Parent.Width-20
+            X: =10
+            Y: =85
+            ZIndex: =2
+
+            Label1 As label:
+                Color: =AllScreensCSS.RColorWhite
+                Fill: =AllScreensCSS.RActiveColor
+                Height: =Parent.Height
+                PaddingLeft: =20
+                Size: =AllScreensCSS.RFontSize
+                Text: ="About"
+                Width: =Parent.Width
+                ZIndex: =1
+
+        ctnMiddleCS_1 As groupContainer.manualLayoutContainer:
+            AlignInContainer: =AlignInContainer.SetByContainer
+            Fill: =RGBA(255, 255, 255, 1)
+            FillPortions: =0
+            Height: =Parent.Height-ctnHeaderCS_1.Height-ctnLeadsDetailsCS_1.Height-40
+            LayoutMinHeight: =100
+            LayoutMinWidth: =250
+            PaddingLeft: =5
+            PaddingRight: =5
+            Width: =Parent.Width-20
+            Y: =180
+            ZIndex: =3
+
+    grpMenuCS_1 As group:
+        Height: =5
+        Width: =5
+        X: =40
+        Y: =80
+        ZIndex: =5
+
+        ctnBackgroundMenuCS_1 As groupContainer.manualLayoutContainer:
+            Fill: =RGBA(0, 0.19, 0.19, 0.19)
+            Height: =Parent.Height-ctnHeaderDS.Height
+            Visible: =varshowMenu
+            Width: =Parent.Width
+            Y: =ctnHeaderDS.Y+ctnHeaderDS.Height
+            ZIndex: =2
+
+        "glryMenuCS_1 As gallery.'BrowseLayout_Vertical_OneTextOneImageVariant_ver4.0'":
+            BorderColor: =RGBA(255, 255, 255, 1)
+            BorderThickness: =1
+            Fill: =RGBA(237, 237, 237, 1)
+            Height: =1.08*(CountRows(glryMenuCS_1.AllItems)*(glryMenuCS_1.TemplateHeight))
+            Items: =Menu
+            Layout: =Layout.Vertical
+            ShowScrollbar: =false
+            TemplatePadding: =0
+            TemplateSize: =90
+            Visible: =varshowMenu
+            Width: =Parent.Width/4
+            X: =10
+            Y: =ctnHeaderDS.Y+ctnHeaderDS.Height
+            ZIndex: =3
+
+            ctnMenuCS_1 As groupContainer.manualLayoutContainer:
+                DropShadow: =DropShadow.ExtraBold
+                Fill: =RGBA(255, 255, 255, 1)
+                Height: =80
+                Width: =Parent.Width/1.02
+                ZIndex: =8
+
+                lblMenuCS_1 As label:
+                    AutoHeight: =true
+                    Color: =RGBA(255, 0, 0, 1)
+                    Height: =24
+                    PaddingBottom: =0
+                    PaddingLeft: =0
+                    PaddingRight: =0
+                    PaddingTop: =0
+                    Size: =If(Parent.Width<500,10,12)
+                    Text: =ThisItem.Title
+                    Width: =Parent.Width-iconMenuCS_1.Width-lineIndicatorCS_1.Width
+                    X: =iconMenuCS_1.Width+iconMenuCS_1.X
+                    Y: =30
+                    ZIndex: =1
+
+                iconMenuCS_1 As icon.Add:
+                    Color: =RGBA(255, 0, 0, 1)
+                    Height: =Parent.Height/4.5
+                    Icon: =ThisItem.icon
+                    Width: =Parent.Width/4.5
+                    X: =12
+                    Y: =30
+                    ZIndex: =3
+
+                btnMenuCS_1 As button:
+                    Fill: =RGBA(0, 0, 0, 0)
+                    Height: =80
+                    HoverFill: =
+                    OnSelect: |+
+                        =Set(varshowMenu,!varshowMenu);Navigate(ThisItem.Navigate);
+                        
+                    PressedFill: =
+                    Size: =24
+                    Text: =""
+                    Width: =Parent.Width
+                    ZIndex: =4
+
+                lineIndicatorCS_1 As rectangle:
+                    BorderColor: =RGBA(255, 0, 0, 1)
+                    BorderThickness: =5
+                    Fill: =RGBA(255, 0, 0, 1)
+                    Height: =Parent.Height
+                    Visible: =If(ThisItem.Navigate=DashboardScreen,true,false)
+                    Width: =4
+                    X: =1
+                    ZIndex: =5
+
+    PopopMandatoryCS_1 As groupContainer.manualLayoutContainer:
+        Fill: =RGBA(0, 0, 0, 0.29)
+        Height: =Parent.Height
+        Visible: =VarNotification
+        Width: =Parent.Width
+        ZIndex: =6
+
+        borderPopopErrorCS_1 As rectangle:
+            Fill: =RGBA(255, 255, 255, 1)
+            Height: |
+                =//If(Parent.Height<500,Parent.Height/1.5,Parent.Height/3)
+                If(Parent.Width<500 || Parent.Height<500,260,Parent.Width>500 ,300)
+            Width: =If(Parent.Width<1000,Parent.Width/1.2,Parent.Width/2)
+            X: =(Parent.Width-Self.Width)/2
+            Y: =(Parent.Height-Self.Height)/2
+            ZIndex: =1
+
