--- a/QuantumTechnicianApp/Src/DashboardScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/DashboardScreen.fx.yaml
@@ -36,7 +36,7 @@ DashboardScreen As screen:
         ZIndex: =1
 
         ctnHeaderDS As groupContainer.horizontalAutoLayoutContainer:
-            Fill: =RGBA(255, 255, 255, 1)
+            Fill: =AllScreensCSS.RColorWhite
             FillPortions: =0
             Height: |
                 =//Parent.Height/13.5
@@ -54,7 +54,7 @@ DashboardScreen As screen:
 
             IconMenuDS As icon.Hamburger:
                 AlignInContainer: =AlignInContainer.Center
-                Color: =RGBA(0, 0, 0, 1)
+                Color: =AllScreensCSS.RColorBlack
                 Height: =Parent.Height
                 Icon: =Icon.Hamburger
                 OnSelect: |-
@@ -103,13 +103,13 @@ DashboardScreen As screen:
 
             btnUsernameDS As button:
                 AlignInContainer: =AlignInContainer.Center
-                BorderColor: =Color.Red
-                Color: =RGBA(0, 0, 0, 1)
+                BorderColor: =AllScreensCSS.RActiveColor
+                Color: =AllScreensCSS.RColorBlack
                 DisabledBorderColor: =RGBA(255, 0, 0, 1)
                 DisabledColor: =RGBA(0, 0, 0, 1)
                 DisabledFill: =RGBA(0, 0, 0, 0)
                 DisplayMode: =DisplayMode.Disabled
-                Fill: =RGBA(0, 0, 0, 0)
+                Fill: =AllScreensCSS.RColorWhite
                 Font: =Font.Arial
                 Height: =If(Parent.Width<500,Parent.Height/1.9,Parent.Height/1.6)
                 RadiusBottomLeft: =50
@@ -160,6 +160,7 @@ DashboardScreen As screen:
 
             lblTimeSpanDS As label:
                 Align: =Align.Right
+                Color: =AllScreensCSS.RColorBlack
                 Font: =Font.Arial
                 Height: =Parent.Height
                 PaddingLeft: =0
@@ -209,12 +210,13 @@ DashboardScreen As screen:
                 toggleYearDS As toggleSwitch:
                     AlignInContainer: =AlignInContainer.Center
                     BorderColor: =RGBA(0, 0, 0, 0)
+                    DisabledBorderColor: =AllScreensCSS.RColorBlack
                     DisabledColor: =Color.Black
                     DisplayMode: |-
                         =//If(toggleYearDS.TrueText<>toggleYearDS.FalseText,DisplayMode.Disabled,DisplayMode.Disabled)
                         //DisplayMode.Edit
                         If(CountRows(Filter(GCTotalIncentives,TechnicianID=VarTechnicianID.'Personnel No'))=0,DisplayMode.Disabled,DisplayMode.Edit)
-                    FalseFill: =Color.Black
+                    FalseFill: =AllScreensCSS.RColorBlack
                     FalseText: |-
                         =//LookUp(LeadInformations,MechanicName=User().FullName,Year('Created On')) &"-"& Year(Now())
                         LookUp(GCTotalIncentives,TechnicianID=VarTechnicianID.'Personnel No',Year)
@@ -232,7 +234,7 @@ DashboardScreen As screen:
                         Set(cumulatively,false);
                     ShowLabel: =false
                     Size: =If(Parent.Width>500,18,Parent.Width<500,12,12)
-                    TrueFill: =RGBA(220, 0, 0, 1)
+                    TrueFill: =AllScreensCSS.RActiveColor
                     TrueText: =Min(GCTotalIncentives,Year)  & "-" & Max(GCTotalIncentives,Year)
                     Width: |-
                         =//If(Parent.Width<1000,Parent.Width/1.2,Parent.Width>1000,Parent.Width/10,Parent.Width>2000,Parent.Width)
@@ -241,7 +243,7 @@ DashboardScreen As screen:
                     ZIndex: =1
 
             Image3 As image:
-                BorderColor: =RGBA(0, 0, 0, 1)
+                BorderColor: =AllScreensCSS.RColorBlack
                 BorderThickness: =1
                 DisabledFill: =RGBA(255, 255, 255, 1)
                 Fill: =RGBA(255, 255, 255, 1)
