--- a/QuantumTechnicianApp/Src/App.fx.yaml
+++ b/QuantumTechnicianApp/Src/App.fx.yaml
@@ -55,6 +55,7 @@ App As appinfo:
                     0,
                     1
                 ),
+                DButtonColor :RGBA(169,169,169,1),
                 DFontSize: If(App.Width<358,12,App.Width>358,16,18),
                 DCountSize: If(App.Width<358,14,App.Width>358,16,18),
                 DheadingSize:If(App.Width>800,20,App.Width<358,12,App.Width>358,14)
