--- a/QuantumTechnicianApp/Src/DashboardScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/DashboardScreen.fx.yaml
@@ -340,7 +340,7 @@ DashboardScreen As screen:
 
                         lblOpenLeadsCountDS As label:
                             Align: =Align.Center
-                            Color: =If(CountRows(Filter(LeadInformations,Email=User().Email && LeadStatus="Submitted"))=0,RGBA(169,169,169,1),RGBA(0, 0, 0, 1))
+                            Color: =If(CountRows(Filter(LeadInformations,Email=User().Email && LeadStatus="Submitted"))=0,Dashboard.DButtonColor,AllScreensCSS.RColorBlack)
                             DisplayMode: =DisplayMode.View
                             Font: =Font.Arial
                             FontWeight: =FontWeight.Bold
@@ -365,7 +365,7 @@ DashboardScreen As screen:
                         lblOpenLeadsDS As label:
                             Align: =Align.Center
                             AutoHeight: =true
-                            Color: =If(CountRows(Filter(LeadInformations,Email=User().Email && LeadStatus="Submitted"))=0,RGBA(169,169,169,1),RGBA(0, 0, 0, 1))
+                            Color: =If(CountRows(Filter(LeadInformations,Email=User().Email && LeadStatus="Submitted"))=0,Dashboard.DButtonColor,AllScreensCSS.RColorBlack)
                             DisplayMode: =DisplayMode.View
                             Font: =Font.Arial
                             FontWeight: =FontWeight.Bold
@@ -387,7 +387,7 @@ DashboardScreen As screen:
                         lblOpenDS As label:
                             Align: =Align.Center
                             AutoHeight: =true
-                            Color: =If(CountRows(Filter(LeadInformations,Email=User().Email && LeadStatus="Submitted"))=0,RGBA(169,169,169,1),RGBA(0, 0, 0, 1))
+                            Color: =If(CountRows(Filter(LeadInformations,Email=User().Email && LeadStatus="Submitted"))=0,Dashboard.DButtonColor,AllScreensCSS.RColorBlack)
                             DisplayMode: =DisplayMode.View
                             Font: =Font.Arial
                             FontWeight: =FontWeight.Bold
