--- a/QuantumTechnicianApp/Src/App.fx.yaml
+++ b/QuantumTechnicianApp/Src/App.fx.yaml
@@ -89,7 +89,7 @@ App As appinfo:
                     0,
                     1
                 ),
-                RFont: "SF UI Display",
+                RFont: "Arial",
                 ButtonFont: "Poppins",
                 RFontSize: If(App.Width<500,16,App.Width>500,20,18),
                 RLabelFontSize: If(App.Width<358,14,App.Width>358,16,18),
