--- a/QuantumTechnicianApp/Src/DashboardScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/DashboardScreen.fx.yaml
@@ -1033,6 +1033,7 @@ DashboardScreen As screen:
                     Color: =Color.White
                     DisabledBorderColor: =RGBA(220, 0, 0, 1)
                     Fill: =RGBA(220, 0, 0, 1)
+                    Font: =AllScreensCSS.RFont
                     FontWeight: =FontWeight.Bold
                     Height: =Parent.Height
                     HoverBorderColor: =RGBA(220,0,0,1)
