--- a/QuantumTechnicianApp/CanvasManifest.json
+++ b/QuantumTechnicianApp/CanvasManifest.json
@@ -145,6 +145,7 @@
     "ViewDetailsScreen",
     "ChatScreen",
     "UserValidateScreen",
-    "AboutScreen"
+    "AboutScreen",
+    "FAQScreen"
   ]
 }
